clusters/talos-cluster/ferret/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ferret
  namespace: ferret
spec:
  selector:
    app: ferret
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
